<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="open_drawer">Sidebar anzeigen</string>
    <string name="close_drawer">Sidebar verstecken</string>

    <!-- Preferences -->
    <string name="pref_state_benders_shown">Bender werden angezeigt.</string>
    <string name="pref_state_benders_notshown">Bender werden nicht angezeigt.</string>
    <string name="pref_state_images_never">Bilder werden nie heruntergeladen.</string>
    <string name="pref_state_images_wifi">Bilder werden nur im WLAN heruntergeladen.</string>
    <string name="pref_state_images_always">Bilder werden immer heruntergeladen.</string>
    <string name="pref_state_benders_never">Bender werden nie heruntergeladen.</string>
    <string name="pref_state_benders_wifi">Bender werden nur im WLAN heruntergeladen.</string>
    <string name="pref_state_benders_always">Bender werden immer heruntergeladen.</string>
    <string name="pref_state_notloggedin">Nicht eingeloggt!</string>
    <string name="pref_state_loggedin">Eingeloggt als:</string>
    <string name="pref_state_messages_poll">Es wird nach PMs gecheckt.</string>
    <string name="pref_state_messages_nopoll">Es wird nicht nach PMs gecheckt.</string>
    <string name="pref_state_debug_active">Debug modus ist aktiv.</string>
    <string name="pref_state_debug_inactive">Debug modus ist nicht aktiv.</string>
    <string name="pref_state_vibrate_active">Vibration aktiv.</string>
    <string name="pref_state_vibrate_inactive">Vibration nicht aktiv.</string>

    <!-- general strings, App related -->
    <string name="app_name">pOT-Droid</string>
    <string name="none"> </string>
    <string name="pm_author_system">System</string>
    <string name="default_time_format">dd.MM.yyyy, HH:mm</string>
    <string name="strong"><![CDATA[<strong>%1$s</strong>]]></string>
    <string name="update_info"><![CDATA[Liebe Nutzerin, lieber Nutzer <br /> <br />
Dies ist eine neue Version von pOT-Droid.<br /> <br />
Es gibt einen pOT-Droid Thread. Den Link und die Änderungen findest du unter \'Über die App\'.]]></string>
    <string name="update_info_about">Über die App</string>
    <string name="update_info_cancel">Lass mich in Ruhe!</string>

    <!-- actions -->
    <string name="action_remove_bookmark">Bookmark entfernen?</string>
    <string name="action_remove_storedpost">Post entfernen?</string>
    <string name="action_clear_storedposts">Alle Posts löschen?</string>
    <string name="action_refresh">Aktualisieren</string>
    <string name="action_previous">Vorherige Seite</string>
    <string name="action_next">Nächste Seite</string>
    <string name="action_send">Senden</string>
    <string name="action_cancel">Abbrechen</string>
    <string name="action_new_message">Neue Nachricht</string>
    <string name="action_new_thread">Neuer Thread</string>
    <string name="action_reply">Antworten</string>
    <string name="action_remove_favorite_board">Board entfernen</string>
    <string name="action_add_favorite_board">Board als Favorit hinzufügen?</string>
    <string name="action_unveil">Zum Beginn der Seite</string>
    <string name="action_tobottom">Zum Ende der Seite</string>
    <string name="action_topage">Gehe zu Seite…</string>
    <string name="action_last_own_post">Zum letzten eigenen Post</string>
    <string name="action_load_all_images">Alle Medien laden</string>
    <string name="action_preload_next">Nächste Seite vorladen</string>
    <string name="action_share">Teilen</string>
    <string name="action_save">Speichern</string>
    <string name="action_export">Exportieren</string>
    <string name="action_clear">Löschen</string>

    <string name="action_mod_close_thread">Topic schließen</string>
    <string name="action_mod_open_thread">Topic öffnen</string>
    <string name="action_mod_hide_thread">Topic verstecken</string>
    <string name="action_mod_unhide_thread">Topic sichtbar machen</string>
    <string name="action_mod_pin_thread">Topic anheften</string>
    <string name="action_mod_unpin_thread">Topic abheften</string>

    <!-- messages -->
    <string name="msg_login_success">Erfolgreich eingeloggt! Die App sollte neu gestartet werden.</string>
    <string name="msg_login_failure">Fehler beim Login!</string>
    <string name="msg_logout_success">Daten gelöscht! Die App sollte neu gestartet werden.</string>
    <string name="msg_logout">Hiermit wird der Cookie gelöscht.</string>
    <string name="msg_login_dialog_warning">Das Passwort wird NICHT gespeichert! Es wird lediglich ein Cookie erstellt.</string>
    <string name="msg_loading_error">Fehler beim Laden der Daten.</string>
    <string name="msg_posting_error">Fehler beim Posten. Vorsicht! Ggf. wurde trotzdem erfolgreich gesendet!</string>
    <string name="msg_bookmark_removed">Bookmark entfernt.</string>
    <string name="msg_bookmark_added">Bookmark hinzugefügt.</string>
    <string name="msg_message_loading">Lade Nachricht</string>
    <string name="msg_topic_closed">Vorsicht, Topic geschlossen!</string>
    <string name="msg_post_notyours">Nicht dein Post!</string>
    <string name="msg_send_successful">Erfolgreich gesendet</string>
    <string name="msg_send_failure">Fehlgeschlagen</string>
    <string name="msg_error_gb">Durch einen Bug in Android 2.3 sind einige Topic Features nicht verfügbar.</string>
    <string name="msg_remove_success">Erfolgreich entfernt.</string>
    <string name="msg_newpm">%1$d neue PMs!</string>
    <string name="msg_marked_favorite">Board als Favorit markiert.</string>
    <string name="msg_answer_created">Antwort erstellt!</string>
    <string name="msg_post_edited">Post bearbeitet!</string>
    <string name="msg_img_loading_error">Fehler beim Laden eines Bildes.</string>
    <string name="msg_img_download_error">Fehler beim Dwnloaden des Bildes.</string>
    <string name="msg_img_download_success">Bild erfolgreich gespeichert.</string>
    <string name="msg_video_download_error">Fehler beim Download des Videos.</string>
    <string name="msg_video_download_success">Video erfolgreich gespeichert.</string>
    <string name="msg_youtube_download_error">Youtube videos können nicht heruntergeladen werden.</string>
    <string name="msg_permission_denied_error">Die App muss entsprechende Berechtigungen für diese Aktion haben!</string>
    <string name="msg_share_error">Beim Teilen ist etwas schief gelaufen.</string>
    <string name="msg_import_error">Importieren schief gegangen...</string>
    <string name="msg_export_error">Exportieren schief gegangen...</string>
    <string name="msg_import_success">Importieren erfolgreich! Du solltest die App neu starten.</string>
    <string name="msg_export_success">Exportieren erfolgreich. Du findest die settings in /sdcard/Android/data/com.mde.potdroid/files/settings.</string>
    <string name="msg_preload_success">Nächste Seite erfolgreich vorgeladen.</string>
    <string name="msg_storage_cleared">Gespeicherte posts gelöscht.</string>
    <string name="msg_storage_exported">Gespeicherte posts exportiert. Du findest die Posts in /sdcard/Android/data/com.mde.potdroid/files.</string>
    <string name="msg_storedpost_deleted">Post entfernt.</string>
    <string name="msg_mod_action_done">Quickmod Action ausgeführt</string>
    <string name="msg_mod_action_error">Quickmod Action fehlgeschlagen</string>

    <!-- menu items -->
    <string name="menu_settings">Settings</string>
    <string name="menu_forum">Forenübersicht</string>

    <!-- titles and subtitles -->
    <string name="subtitle_settings">Settings</string>
    <string name="subtitle_message"><![CDATA[%1$s <strong>%2$s</strong>]]></string>
    <string name="subtitle_paginate"><![CDATA[Seite <strong>%1$d</strong> von <strong>%2$d</strong>]]></string>
    <string name="subtitle_bookmarks"><![CDATA[<strong>%1$d</strong> Ungelesene Posts.]]></string>
    <string name="subtitle_form_write_post">Antwort verfassen</string>
    <string name="subtitle_form_edit_post">Post bearbeiten</string>
    <string name="subtitle_form_write_pm">Nachricht verfassen</string>
    <string name="subtitle_form_write_thread">Thread verfassen</string>
    <string name="subtitle_form_edit_thread">Thread bearbeiten</string>
    <string name="title_messages">PM Nachrichten</string>
    <string name="tab_inbox">Posteingang</string>
    <string name="tab_outbox">Postausgang</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_storedposts">Gespeicherte Posts</string>
    <string name="title_forum">Forenübersicht</string>
    <string name="dialog_post_actions">Aktionen</string>

    <!-- forms -->
    <string name="dialog_username_hint">Username</string>
    <string name="dialog_password_hint">Passwort</string>
    <string name="dialog_icon_selection">Icon auswählen.</string>
    <string name="form_text_hint">Text</string>
    <string name="form_title_hint">Titel</string>
    <string name="form_rcpt_hint">Empfänger</string>
    <string name="form_subtitle_hint">Untertitel</string>
    <string name="form_tags_hint">Tag1, Tag2, …</string>

    <!-- vies -->
    <string name="topic_additional_information"><![CDATA[<strong>%1$d</strong>P, <strong>%2$d</strong>S]]></string>
    <string name="new_posts_description"><![CDATA[<strong>%1$d</strong> neue Posts, <strong>%2$d</strong> Seiten]]></string>
    <string name="message_description"><![CDATA[%1$s <strong>%2$s</strong>, %3$s: %4$s]]></string>
    <string name="message_header">\n\n------------------------\n%1$s schrieb am %2$s:\n</string>
    <string name="last_post"><![CDATA[Letzter Beitrag von <strong>%1$s</strong> (%2$s)]]></string>
    <string name="last_post_sidebar"><![CDATA[von %1$s (%2$s)]]></string>
    <string name="quote"><![CDATA[[quote=%1$d,%2$d,\"%3$s\"][b]\n%4$s\n[/b][/quote]]]></string>
    <string name="sidebar_cap_bookmarks">BOOKMARKS</string>
    <string name="sidebar_cap_boards">BOARDS</string>
    <string name="no_unread_bookmarks">Keine ungelesenen Bookmarks</string>
    <string name="no_favorite_boards">Keine Favoriten</string>
    <string name="thread_lastpost"><![CDATA[<strong>%1$s</strong>, %2$s Uhr]]></string>
    <string name="notloggedin">Nicht eingeloggt!</string>

    <!-- dialogs -->
    <string name="post_dialog_edit">Bearbeiten</string>
    <string name="post_dialog_quote">Zitieren</string>
    <string name="post_dialog_bookmark">Bookmark setzen</string>
    <string name="post_dialog_save">Post speichern</string>
    <string name="post_dialog_browser">Im Browser öffnen</string>
    <string name="post_dialog_clipboard">Link kopieren</string>
    <string name="post_dialog_pm">PM schicken</string>
    <string name="post_dialog_mod_hide">Post verstecken</string>
    <string name="post_dialog_mod_hidetext">Inhalt verstecken</string>
    <string name="post_dialog_mod_unhide">Post aufdecken</string>
    <string name="image_dialog_view">Im Media Viewer öffnen</string>
    <string name="image_dialog_share">Teilen</string>
    <string name="image_dialog_download">Herunterladen</string>
    <string name="choose_browser">Browser wählen…</string>
    <string name="no_browser_installed">Kein Browser installiert?</string>
    <string name="post_dialog_title">Aktionen</string>
    <string name="image_dialog_title">Bild Aktionen</string>
    <string name="link_dialog_title">Link</string>
    <string name="link_dialog_goto">Gehe zu</string>
    <string name="link_dialog_close">Abbrechen</string>
    <string name="editor_dialog_ok">Einfügen</string>
    <string name="editor_dialog_cancel">Abbrechen</string>


</resources>
